Page d'accueil ajout 'dernière annonce' en dur

--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -48,6 +48,24 @@
   </tr>
 </table>
 
+<!-- AIDER QUELQUUN ?-->
+<table align="center" cellpadding="80">
+  <tr>
+    <td align="right">
+      <img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
+    </td>
+    <td valign="top">
+      <table>
+        <tr>
+          <td><img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt=""></td>
+        </tr>
+        <tr>
+          <p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
 
 <!-- AIDER QLQ
