structure récupération helpers ok, tests en cours #31

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -17,6 +17,9 @@
               </app-service>
             </div>
           </td>
+          <td [rowSpan]="proposed_services.length">
+
+          </td>
         </tr>
 
       </table>
