--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,32 +1,43 @@
-<table border="solid 3px">
+<table border="solid 3px" width="1800px">
   <tr>
-    <td>
+    <!-- ###################### LISTE DES SERVICES DEMANDES ############################""""-->
+    <td width="1000px">
       <div class="col-md-7" id="services-list">
         <h2 id="demandeTexte">Vos demandes en cours</h2>
         <div class="row">
           <ul class="list-group">
-            <div *ngFor="let service of proposed_services,  let i =index,">
-              <app-service
-                [serviceName]="service.content.name"
-                [serviceUser]="service.content.user"
-                [serviceDescription]="service.content.description"
-                [serviceImage]="service.content.image"
-                [index]="i"
-                [id]="service.id"
-                [serviceDate]="service.content.datejour">
-              </app-service>
+            <div *ngFor="let service of proposed_services,  let i =index">
+              <table width="800px" border="3px solid">
+                <tr>
+                  <td width="95%">
+                    <app-service
+                      [serviceName]="service.content.name"
+                      [serviceUser]="service.content.user"
+                      [serviceDescription]="service.content.description"
+                      [serviceImage]="service.content.image"
+                      [index]="i"
+                      [id]="service.id"
+                      [serviceDate]="service.content.datejour">
+                    </app-service>
+                  </td>
+                  <td width="5%">
+                    {{i+1}}
+                  </td>
+                </tr>
+              </table>
             </div>
           </ul>
         </div>
       </div>
     </td>
 
+    <!-- ###################### LISTE DES PROPOSITIONS D'AIDES ###############################-->
     <td>
       <div id="helpersContainer">
-        <h2>Détails</h2>
+        <h2>Réactions</h2>
         <div id="selectionContainer">
-          <p>Selectionner votre annonce</p>
           <mat-form-field>
+            <mat-label><span style="color: cornflowerblue">Quelle annonce ?</span></mat-label>
             <mat-select [(value)]="selectedAnnounce" (selectionChange)="getHelpers(selectedAnnounce)">
               <mat-option *ngFor="let announce of proposed_services, let i = index" [value]="i">
                 {{i + 1}}
@@ -34,9 +45,21 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div *ngFor="let helper of helpers">
-          Nom : {{helper.firstName}}
-        </div>
+
+        <mat-toolbar color="#ffffff" *ngIf="helpers.length > 0"> <!-- color ne marche pas-->
+        <mat-toolbar-row *ngFor="let helper of helpers">
+          <span>{{helper.firstName}} {{helper.lastName}} vous a proposé son aide.</span>
+          <span class="spacer"></span>
+          <mat-icon (click)="router.navigate(['profil/'+helper.idUser])">face</mat-icon>
+          <!--<mat-icon [routerLink]=""> face </mat-icon>-->
+          <mat-icon *ngIf="response[selectedAnnounce] == undefined" (click)="this.response[selectedAnnounce] = helper.idUser"> done </mat-icon>
+          <mat-icon *ngIf="response[selectedAnnounce] == undefined"> highlight_off </mat-icon>
+          <mat-icon *ngIf="response[selectedAnnounce] != undefined && response[selectedAnnounce] != helper.idUser">
+            not_interested
+          </mat-icon>
+          <mat-icon *ngIf="response[selectedAnnounce] == helper.idUser"> done_all </mat-icon>
+        </mat-toolbar-row>
+        </mat-toolbar>
       </div>
     </td>
   </tr>
