--- a/pfirst/src/app/info-settings/info-settings.component.css
+++ b/pfirst/src/app/info-settings/info-settings.component.css
@@ -20,6 +20,18 @@
   left: 200px;
 }
 
+#infoHeader
+{
+  position: absolute;
+  top: 200px;
+  left: 200px;
+}
+
+#infoToolbar
+{
+  height: 50px;
+  width: 860px;
+}
 #mdpContainer
 {
   width: 460px;
@@ -46,4 +58,28 @@
   font-size: 20px;
   font-weight: lighter;
   font-family: -apple-system;
+}
+
+#changePassword
+{
+  width: 460px;
+  height: 50px;
+}
+
+.spacer
+{
+  flex: 1 1 auto;
+  z-index: 10;
+}
+
+.icon
+{
+  cursor: pointer;
+}
+
+#showMdpContainer
+{
+  position: absolute;
+  top: 200px;
+  left: 1200px;
 }
