--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -30,11 +30,11 @@
 
               <div class="form-group">
                 <label for ="salle" ><h2>Quel salle necesite d'etre nettoyer </h2></label>
-                <input type="text" id="salle"  >
+                <input type="text" id="salle"  class="form-control" formControlName="salle" >
               </div>
 
               <div class="form-group">
-                <label for ="localisation" ><h2>Indiquer (au minimum) la ville ou vous vous trouvez </h2></label>
+                <label for ="localisation" ><h2>Ville  </h2></label>
                 <input type="text" id="localisation" class="form-control" formControlName="localisation">
               </div>
 
