--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,9 +1,25 @@
+
 <table border="solid 3px" width="1800px">
   <tr>
     <!-- ###################### LISTE DES SERVICES DEMANDES ############################""""-->
     <td width="1000px">
       <div class="col-md-7" id="services-list">
-        <h2 id="demandeTexte">Vos demandes en cours</h2>
+        <table>
+          <tr>
+            <td>
+              <h2  id="demandeTexte">Vos demandes en cours</h2>
+            </td>
+            <td>
+              <img  *ngIf="!isCollapsed" (click)="isCollapsed = !isCollapsed"
+                    [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample"
+                style="width:50px" src="../../assets/data/fleche.png" alt="">
+              <img  *ngIf="isCollapsed" (click)="isCollapsed = !isCollapsed"
+                    [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample"
+                    style="width:50px" src="../../assets/data/fleche_up.png" alt="">
+            </td>
+          </tr>
+        </table>
+        <div id="collapseExample" [ngbCollapse]="isCollapsed">
         <div class="row">
           <ul class="list-group">
             <div *ngFor="let service of proposed_services,  let i =index">
@@ -28,6 +44,7 @@
             </div>
           </ul>
         </div>
+      </div>
       </div>
     </td>
 
