--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -1,4 +1,69 @@
-<div id="profilMain">
+
+<table align="center" class="lignesEspaces">
+
+  <!-- NOM PRENOM PHOTO -->
+  <tr align="right"><button class="btn btn-primary" *ngIf="myProfil"
+                            (click)="router.navigate(['mes-infos'])">MODIFIER</button></tr>
+  <tr>
+    <div class="card" >
+      <table cellpadding="30">
+        <tr>
+          <td align="center"><div id="profil-pic"></div></td>
+          <td><span class="user_identifier">{{info_user['firstName']}} {{info_user['lastName']}}</span></td>
+          <td><img style="width:50px" src="../../assets/data/star.png" alt=""> <span
+            style="font-size: large;color: dimgray">4.8 <b>/5</b></span><i> (en dur)</i></td>
+        </tr>
+        <tr align="center">
+          <span style="cursor:pointer" id="info" ngbPopover="Un rang permet de juger de l'expérience d'un
+          utilisateur. Selon son investissement dans INEED, il sera Novice, Confirmé ou Expert."
+                    triggers="mouseenter:mouseleave"
+                    popoverTitle="Un rang c'est quoi ?" placement="right">
+                  <span id="text_info" style="width: 200px" class="badge badge-pill badge-primary">Rang</span>
+          </span>
+        </tr>
+      </table>
+    </div>
+  </tr>
+
+  <!-- BIOGRAPHIE -->
+  <tr>
+    <div class="card">
+      <td>
+        <table cellpadding="20">
+          <tr>
+            <td><span id="titre"><b>Biographie</b></span></td>
+          </tr>
+          <tr><td><p style="width: 40rem"><i>{{info_user['bio']}}</i></p></td></tr>
+        </table>
+      </td>
+    </div>
+  </tr>
+
+  <!-- DERNIÈRE ACTIVITÉ -->
+  <tr>
+    <div class="card">
+      <td>
+        <table cellpadding="20">
+          <tr>
+            <td><span id="titre"><b>Dernière activité</b></span></td>
+          </tr>
+          <tr>
+            <td>
+              <p>Dernier service rendu : <!-- type et date --></p>
+              <p>Dernier service demandé : <!-- type et date --></p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </div>
+  </tr>
+
+
+
+
+</table>
+
+<!-- <div id="profilMain">
 
   <table cellpadding="10" width="100%">
     <tr>
@@ -50,3 +115,4 @@
     </table>
   </div>
 </div>
+-->
