--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -66,7 +66,7 @@
                 <input type="file" class="form-control" id="profil-pic" name="profil-pic"
                        (change)="onFileSelected($event)"
                        ngModel>
-                <img [src]="'data:image/png;base64,' + this.undefinedPic" alt="profil-pic">
+                <img [src]="'data:image/png;base64,' + this.undefinedPicCompressed" alt="profil-pic">
                 <span>(en dur)</span>
               </div>
               <button style="margin-left: 330px" class="btn btn-primary" type="submit">Valider</button>
@@ -161,3 +161,16 @@
   </mat-toolbar>
 </div>
 
+<!--  Pour tests de compression (decommentez également variables dans fonctions de compression)
+<div id="compress">
+  <input type="file" accept=".jpg,.png,.jpeg" id="image-input" (change)="selectFile($event)"><br>
+  <br> Original: Size: {{sizeOfOriginalImage | number : '1.2-2'}}MB<br><img [src]="localUrl" height="200px"><br><br>
+  <br> Compressed: Size: {{sizeOFCompressedImage | number : '1.2-2'}}MB<br><img [src]="localCompressedURl" height="150px">
+</div>
+-->
+
+<div id="compress">
+  <input type="file" accept=".jpg,.png,.jpeg" (change)="selectFile($event)"><br>
+  <img [src]="localCompressedURl" height="150px">
+  <span>New image</span>
+</div>
