--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -26,7 +26,7 @@
               <table width="800px" border="3px solid">
                 <tr>
                   <td width="95%">
-                    <app-service
+                    <app-service-activity
                       [serviceName]="service.content.name"
                       [serviceUser]="service.content.user"
                       [serviceDescription]="service.content.description"
@@ -34,7 +34,7 @@
                       [index]="i"
                       [id]="service.id"
                       [serviceDate]="service.content.datejour">
-                    </app-service>
+                    </app-service-activity>
                   </td>
                   <td width="5%">
                     {{i+1}}
