--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -10,7 +10,11 @@
         </button>
         -->
       <td>
-        <div *ngIf="this.authService.isAuthenticated()" id="roundProfilPic" style="cursor:pointer"  (click)="openUserModal()"></div>
+        <div *ngIf="this.authService.isAuthenticated()"
+             id="roundProfilPic" style="cursor:pointer"
+             (click)="openUserModal()"
+             [ngStyle]="{'background-image':'url('+this.undefinedURL+')'}"
+        ></div>
         <!--    A voir dropdown angular https://ng-bootstrap.github.io/#/components/dropdown/examples
         <div class="d-inline-block" ngbDropdown #myDrop="ngbDropdown">
           <button class="btn btn-outline-primary mr-2" id="dropdownManual" ngbDropdownAnchor (focus)="myDrop.open()">Toggle dropdown</button>
@@ -61,7 +65,6 @@
   </table>
   <table align="right" id="buttons_connection" cellpadding="5">
     <tr>
-
       <td>
         <button routerLink="auth" *ngIf="!this.authService.isAuthenticated()" class="btn btn-outline-success" type="button">Se connecter
         </button>
@@ -83,7 +86,8 @@
   <div
     [@notifAppearance]="stateNotif"
     *ngIf="this.hasNotif&&this.authService.isAuthenticated()"
-    id="roundNotifIcon" (click)="openUserModal()">
+    id="roundNotifIcon"
+    (click)="openUserModal()">
     {{this.notifs.length}}
   </div>
 <!--
