--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -66,7 +66,7 @@
                 <input type="file" class="form-control" id="profil-pic" name="profil-pic"
                        (change)="onFileSelected($event)"
                        ngModel>
-                <img [src]="'data:image/png;base64,' + this.undefinedPicCompressed" alt="profil-pic">
+                <img [src]="this.undefinedPicURL" alt="profil-pic">
                 <span>(en dur)</span>
               </div>
               <button style="margin-left: 330px" class="btn btn-primary" type="submit">Valider</button>
@@ -171,6 +171,6 @@
 
 <div id="compress">
   <input type="file" accept=".jpg,.png,.jpeg" (change)="selectFile($event)"><br>
-  <img [src]="localCompressedURl" height="150px">
+  <img [src]="profilPicURL" height="150px">
   <span>New image</span>
 </div>
