detection probleme small_password dans modifs-infos, mise en place debuggage #16

--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -140,8 +140,8 @@
                 <i><strong><span *ngIf="!same_password"
                                  style="color:red">Les mots de passe ne sont pas identiques.</span></strong></i>
               </div>
-
-              <button style="margin-left: 330px" class="btn btn-primary" type="submit">Valider</button>
+              <div (click)="showStatus()">Show status</div>
+              <button style="margin-left: 330px" class="btn btn-primary" type="submit" [disabled]="(!same_password) || small_password">Valider</button>
             </div>
           </form>
         </div>
