Modification de service-activity #3

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,5 +1,5 @@
 
-<table border="solid 3px" width="1800px">
+<table width="1800px">
   <tr>
     <!-- ###################### LISTE DES SERVICES DEMANDES ############################""""-->
     <td width="1000px">
@@ -23,7 +23,7 @@
         <div class="row">
           <ul class="list-group">
             <div *ngFor="let service of proposed_services,  let i =index">
-              <table width="800px" border="3px solid">
+              <table width="800px" border="0px solid">
                 <tr>
                   <td width="95%">
                     <app-service-activity
