Ajout de la fonction receiveHelpers, pb idAnnounce undefined #3

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -32,7 +32,7 @@
                       [serviceDescription]="service.content.description"
                       [serviceImage]="service.content.image"
                       [index]="i"
-                      [id]="service.id"
+                      [id]="service.idAnnounce"
                       [serviceDate]="service.content.datejour">
                     </app-service-activity>
                   </td>
