--- a/pfirst/src/app/service-activity/service-activity.component.html
+++ b/pfirst/src/app/service-activity/service-activity.component.html
@@ -18,7 +18,7 @@
             <div class="text-right">
               <table>
                 <tr>
-                  <td><a href="#" class="btn btn-primary" [disabled] = "true" [routerLink]="[id]" >Propositions</a></td>
+                  <td><button class="btn btn-primary" [disabled] = "this.noHelper" >Propositions</button></td>
                   <td><a href="#" class="btn btn-primary" [routerLink]="[id]" >Voir l'annonce</a></td>
                 </tr>
               </table>
