suppression modif mail (vu avec back) #16

--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -26,14 +26,14 @@
                 <span class="current-info-indicator">{{this.info_user.lastName}}</span>
               </div>
 
-              <!-- ##################### MAIL ####################-->
+              <!-- ##################### MAIL ####################
               <div class="jumbotron" id="formulaire">
                 <label for="mail">Votre email</label>
                 <input type="text" class="form-control" id="mail" name="mail"
                        ngModel>
                 <span class="current-info-indicator">{{this.email}}</span>
               </div>
-
+-->
               <!-- ##################### BIO ####################-->
               <div class="jumbotron" id="formulaire">
                 <table width="100%">
