Affichage des helpers de toutes les annonces postées #3

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,8 +1,8 @@
 
-<table width="1800px">
+<table align="center" width="1800px">
   <tr>
     <!-- ###################### LISTE DES SERVICES DEMANDES ############################""""-->
-    <td width="1000px">
+
       <div class="col-md-7" id="services-list">
         <table>
           <tr>
@@ -46,42 +46,5 @@
         </div>
       </div>
       </div>
-    </td>
-
-    <!-- ###################### LISTE DES PROPOSITIONS D'AIDES ###############################-->
-
-    <!-- Select pour choisir les propositions de quelle annonce afficher, a supprimer car pas ergo -->
-    <td>
-      <div id="helpersContainer">
-        <h1>Réactions</h1>
-        <div id="selectionContainer">
-          <mat-form-field>
-            <mat-label><span style="color: cornflowerblue">Quelle annonce ?</span></mat-label>
-            <mat-select [(value)]="selectedAnnounce" (selectionChange)="getHelpers(selectedAnnounce)">
-              <mat-option *ngFor="let announce of proposed_services, let i = index" [value]="i">
-                {{i + 1}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <!-- Liste des proposition pour l'annonce selectionnée, helper est mis a jour par le select-->
-
-        <mat-toolbar color="#ffffff" *ngIf="helpers.length > 0"> <!-- color ne marche pas-->
-        <mat-toolbar-row *ngFor="let helper of helpers">
-          <span>{{helper.firstName}} {{helper.lastName}} vous a proposé son aide.</span>
-          <span class="spacer"></span>
-          <mat-icon title="Voir le profil" class="icon" (click)="router.navigate(['profil/'+helper.idUser])">face</mat-icon>
-          <!--<mat-icon [routerLink]=""> face </mat-icon>-->
-          <mat-icon class="icon" *ngIf="response[selectedAnnounce] == undefined" (click)="this.response[selectedAnnounce] = helper.idUser"> done </mat-icon>
-          <mat-icon class="icon" *ngIf="response[selectedAnnounce] == undefined"> highlight_off </mat-icon>
-          <mat-icon class="icon" *ngIf="response[selectedAnnounce] != undefined && response[selectedAnnounce] != helper.idUser">
-            not_interested
-          </mat-icon>
-          <mat-icon class="icon" *ngIf="response[selectedAnnounce] == helper.idUser"> done_all </mat-icon>
-        </mat-toolbar-row>
-        </mat-toolbar>
-      </div>
-    </td>
   </tr>
 </table>
