debug changement de photo #16 #14

--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -5,7 +5,8 @@
 
         <div class="col-sm-8 col-sm-offset-2">
 
-          <form (ngSubmit)="onSubmitNewInfos(f); onSubmitNewPicture(f);" #f="ngForm">
+          <!--<form (ngSubmit)="onSubmitNewInfos(f)" #f="ngForm">-->
+          <form (ngSubmit)="onSubmitNewPicture(f)" #f="ngForm">
 
 
             <div class="form-group">
